feat: add header

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <link rel="stylesheet" href="/assets/styles/slyle.scss"> -->
+    <title>PetStory online</title>
+    
 </head>
 <body>
-    <h1>Main</h1>
+    <section class="header">
+        <div class="container">
+            <header class="header__wrap">
+                    <div class="header__logo">
+                        <a href="#about" class="header__logo-link">
+                            <img class="header__logo-img" src="assets/icons/bamboo.svg" alt="веточка бамбука">
+                            <h1 class="header__title">PetStory online</h1>
+                        </a>
+                    </div>
+                    <nav>
+                        <ul class="nav-menu">
+                            <li class="nav-menu__item"><a href="#about" class="nav-menu__link nav-menu__link_active">About</a></li>
+                            <li class="nav-menu__item"><a href="#map" class="nav-menu__link">Map</a></li>
+                            <li class="nav-menu__item"><a href="#zoos" class="nav-menu__link">Zoos</a></li>
+                            <li class="nav-menu__item"><a href="#donate" class="nav-menu__link">Donate</a></li>
+                            <li class="nav-menu__item"><a href="#contact_us" class="nav-menu__link">Contact us</a></li>
+                        </ul>
+                    </nav>
+                    <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" class="header__link">Designed by ©</a>
+            </header>
+        </div>
+    </section>
+    <section class="watch-online">
+        <div class="container">
+            
+        </div>
+    </section>
 </body>
 </html>
