feat: add section watch-online

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,13 @@
     </section>
     <section class="watch-online">
         <div class="container">
-            
+            <div class="watch-online__wrap">
+                <div class="watch-online__descr">
+                    <h2 class="watch-online__title">Watch your <span class="watch-online__title_select">favorite</span> animal online</h2>
+                    <span class="watch-online__round"></span>
+                </div>
+                <button class="button watch-online__btn">wath online</button>
+            </div>
         </div>
     </section>
 </body>
