feat: add section pets, pick-and-feeds

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +37,131 @@
                     <h2 class="watch-online__title">Watch your <span class="watch-online__title_select">favorite</span> animal online</h2>
                     <span class="watch-online__round"></span>
                 </div>
-                <button class="button watch-online__btn">wath online</button>
+                <button type="button" class="button watch-online__btn">wath online</button>
+            </div>
+        </div>
+    </section>
+    <section class="backstage">
+        <div class="container">
+            <div class="backstage__wrap">
+                <img class="backstage__img" src="assets/images/bamboo-cap.jpg" alt="a man in a Non La hat (a cone-shaped hat)">
+                <div class="backstage__descr">
+                    <h2 class="backstage__title">The Backstage of the Wilderness World.</h2>
+                    <p class="backstage__text">The site was founded on the basis of a volunteer movement to protect and care for animals.</p>
+                    <h3 class="backstage__subtitle">How it works </h3>
+                    <p class="backstage__text">The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="pets">
+        <div class="container">
+            <div class="pets__wrap">
+                <div class="pets__items">
+                    <div class="pets__item">
+                        <img class="pets__photo" src="assets/images/animals/giant-pandas.jpg" alt="Two giant pandas">
+                        <div class="pets__descr pets__descr_plants">
+                            <span class="pets__name">giant Pandas</span>
+                            <br>
+                            Native to Southwest China
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img class="pets__photo" src="assets/images/animals/eagles.jpg" alt="Eagle in flight">
+                        <div class="pets__descr pets__descr_meets">
+                            <span class="pets__name">Eagles</span>
+                            <br>
+                            Native to South America
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img class="pets__photo" src="assets/images/animals/gorillas.jpg" alt="Gorilla">
+                        <div class="pets__descr pets__descr_plants">
+                            <span class="pets__name">Gorillas</span>
+                            <br>
+                            Native to Congo
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img class="pets__photo" src="assets/images/animals/two-toed_sloth.jpg" alt="Two-toed Sloth">
+                        <div class="pets__descr pets__descr_plants">
+                            <span class="pets__name">Two-toed Sloth</span>
+                            <br>
+                            Mesoamerica, South America
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img class="pets__photo" src="assets/images/animals/cheetans.jpg" alt="Cheetah with a cub">
+                        <div class="pets__descr pets__descr_meets">
+                            <span class="pets__name">cheetahs</span>
+                            <br>
+                            Native to Africa
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img class="pets__photo" src="assets/images/animals/penguins.jpg" alt="Penguin in Antarctica">
+                        <div class="pets__descr pets__descr_meets">
+                            <span class="pets__name">Penguins</span>
+                            <br>
+                            Native to Antarctica
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="button button_prev pets__btn-prev">&larr;</button>
+                <button type="button" class="button button_next pets__btn-next">&rarr;</button>
+            </div>
+            <button type="button" class="button pets__btn">choose your favorite</button>
+        </div>
+    </section>
+    <section class="pick-and-feed">
+        <div class="container">
+            <div class="pick-and-feed__wrap">
+                <h2 class="pick-and-feed__title">
+                    Pick and feed a friend
+                </h2>
+                <div class="pick-and-feed__descr">
+                    <p class="pick-and-feed__info">
+                        We know the animals bring you joy, and in these extraordinary times, we’re glad.
+                    </p>
+                    <p class="pick-and-feed__text pick-and-feed__text_select">
+                        During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.
+                    </p>
+                    <p class="pick-and-feed__text">
+                        Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider
+                        <br> a gift to our <a class="pick-and-feed__text pick-and-feed__text_link" href="#">Emergency Support Fund.</a> 
+                    </p>
+                </div>
+                <h3 class="pick-and-feed__subtitle">
+                    How it works
+                </h3>
+                <div class="pick-and-feed__items">
+                    <div class="pick-and-feed__item">
+                        <div class="pick-and-feed__item-img">
+                            <img class="pick-and-feed__item-img-pay" src="assets/icons/pay.svg" alt="Pay icon">
+                        </div>
+                        <div class="pick-and-feed__item-descr">
+                            Pay with card
+                        </div>
+                    </div>
+                    <div class="pick-and-feed__item">
+                        <div class="pick-and-feed__item-img">
+                            <img class="pick-and-feed__item-img-zoo" src="assets/icons/zoo.svg" alt="Zoo icon">
+                        </div>
+                        <div class="pick-and-feed__item-descr">
+                            Payment goes to the zoo
+                        </div>
+                    </div>
+                    <div class="pick-and-feed__item">
+                        <div class="pick-and-feed__item-img">
+                            <img class="pick-and-feed__item-img_monkey" src="assets/icons/monkey.svg" alt="monkey icon">
+                        </div>
+                        <div class="pick-and-feed__item-descr">
+                            Your favourite animal gets delicious dish
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="button pick-and-feed__btn">Feed a friend now</button>
+
             </div>
         </div>
     </section>
