feat: add section testimonials, footer

--- a/src/index.html
+++ b/src/index.html
@@ -8,21 +8,20 @@
     
 </head>
 <body>
-    <section class="header">
+    <section class="header" id="about">
         <div class="container">
             <header class="header__wrap">
                     <div class="header__logo">
                         <a href="#about" class="header__logo-link">
-                            <img class="header__logo-img" src="assets/icons/bamboo.svg" alt="веточка бамбука">
                             <h1 class="header__title">PetStory online</h1>
                         </a>
                     </div>
                     <nav>
-                        <ul class="nav-menu">
+                        <ul class="nav-menu header__nav-menu">
                             <li class="nav-menu__item"><a href="#about" class="nav-menu__link nav-menu__link_active">About</a></li>
                             <li class="nav-menu__item"><a href="#map" class="nav-menu__link">Map</a></li>
                             <li class="nav-menu__item"><a href="#zoos" class="nav-menu__link">Zoos</a></li>
-                            <li class="nav-menu__item"><a href="#donate" class="nav-menu__link">Donate</a></li>
+                            <li class="nav-menu__item"><a href="pages/donate.html" class="nav-menu__link">Donate</a></li>
                             <li class="nav-menu__item"><a href="#contact_us" class="nav-menu__link">Contact us</a></li>
                         </ul>
                     </nav>
@@ -128,7 +127,7 @@
                     </p>
                     <p class="pick-and-feed__text">
                         Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider
-                        <br> a gift to our <a class="pick-and-feed__text pick-and-feed__text_link" href="#">Emergency Support Fund.</a> 
+                        <br> a gift to our <a class="pick-and-feed__text pick-and-feed__text_link" href="pages/donate.html">Emergency Support Fund.</a> 
                     </p>
                 </div>
                 <h3 class="pick-and-feed__subtitle">
@@ -143,6 +142,7 @@
                             Pay with card
                         </div>
                     </div>
+                    <img class="pick-and-feed__arrow" src="assets/icons/arrow.svg" alt="Arrow">
                     <div class="pick-and-feed__item">
                         <div class="pick-and-feed__item-img">
                             <img class="pick-and-feed__item-img-zoo" src="assets/icons/zoo.svg" alt="Zoo icon">
@@ -151,6 +151,7 @@
                             Payment goes to the zoo
                         </div>
                     </div>
+                    <img class="pick-and-feed__arrow" src="assets/icons/arrow.svg" alt="Arrow">
                     <div class="pick-and-feed__item">
                         <div class="pick-and-feed__item-img">
                             <img class="pick-and-feed__item-img_monkey" src="assets/icons/monkey.svg" alt="monkey icon">
@@ -161,9 +162,108 @@
                     </div>
                 </div>
                 <button type="button" class="button pick-and-feed__btn">Feed a friend now</button>
-
             </div>
         </div>
     </section>
+    <section class="testimonials">
+        <div class="container">
+            <h2 class="testimonials__title">Testimonials</h2>
+            <div class="testimonials__items">
+                <div class="testimonials__item">
+                    <div class="testimonials__item-header">
+                        <img class="testimonials__item-photo" src="assets/images/users/user_icon.svg" alt="User">
+                        <div class="testimonials__item-name">
+                            <span>Michael John</span> 
+                            <br>Local Austria &middot; Today
+                        </div>
+                    </div>
+                    <div class="testimonials__item-descr">
+                        The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                        The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                    </div>
+                </div>
+                <div class="testimonials__item">
+                    <div class="testimonials__item-header">
+                        <img class="testimonials__item-photo" src="assets/images/users/OskarSamborsky.png" alt="User">
+                        <div class="testimonials__item-name">
+                            <span>Oskar Samborsky</span> 
+                            <br>Local Austria &middot; Yesterday
+                        </div>
+                    </div>
+                    <div class="testimonials__item-descr">
+                        Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                        The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for
+                    </div>
+                </div>
+                <div class="testimonials__item">
+                    <div class="testimonials__item-header">
+                        <img class="testimonials__item-photo" src="assets/images/users/FrederickaMichelin.png" alt="User">
+                        <div class="testimonials__item-name">
+                            <span>Fredericka Michelin</span> 
+                            <br>Local Austria &middot; Yesterday
+                        </div>
+                    </div>
+                    <div class="testimonials__item-descr">
+                        The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                        <br>The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. 
+                        <br>The best online zoo I’ve met. My son delighted very much ljves to 
+                    </div>
+                </div>
+                <div class="testimonials__item">
+                    <div class="testimonials__item-header">
+                        <img class="testimonials__item-photo" src="assets/images/users/MilaRiksha.png" alt="User">
+                        <div class="testimonials__item-name">
+                            <span>Mila Riksha</span> 
+                            <br>Local Austria &middot; Yesterday
+                        </div>
+                    </div>
+                    <div class="testimonials__item-descr">
+                        My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf 
+                    </div>
+                </div>
+            </div>
+            <input class="slider-range testimonials__range" type="range" min="0" max="10" value="0">
+            <button type="button" class="button  button_min-radius testimonials__btn">leave feedback</button>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrap">
+                <div class="header__logo footer__logo">
+                    <a href="#about" class="header__logo-link">
+                        <h1 class="header__title">PetStory online</h1>
+                    </a>
+                </div>
+                <button type="button" class="button  button_min-radius footer__btn">
+                    <a href="pages/donate.html">donate for volunteers</a>
+                </button>
+                <div class="footer__social">
+                    <a href="https://www.facebook.com/" class="footer__social-item"><img src="assets/icons/social/facebook.svg" alt="Facebook" class="footer__social-icon">Facebook</a>
+                    <a href="https://twitter.com/" class="footer__social-item"><img src="assets/icons/social/twitter.svg" alt="Twitter" class="footer__social-icon">Twitter</a>
+                    <a href="https://instagram.com/" class="footer__social-item"><img src="assets/icons/social/instagram.svg" alt="Instagram" class="footer__social-icon">Instagram</a>
+                    <a href="https://www.youtube.com/" class="footer__social-item"><img src="assets/icons/social/youtube.svg" alt="YouTube" class="footer__social-icon">YouTube</a>
+                </div>
+                <div class="footer__subscribe">
+                    <div class="footer__form-descr">Subscribe to our news</div>
+                    <form class="feed-form" action="#">
+                        <input  type="email" name="email" required placeholder="Enter your email">
+                        <button type="submit" class="button-submit">Submit</button>
+                    </form>
+                </div>
+                <nav class="footer__nav">
+                    <ul class="nav-menu footer__nav-menu">
+                        <li class="nav-menu__item"><a href="#about" class="nav-menu__link nav-menu__link_active">About</a></li>
+                        <li class="nav-menu__item"><a href="#map" class="nav-menu__link">Map</a></li>
+                        <li class="nav-menu__item"><a href="#zoos" class="nav-menu__link">Zoos</a></li>
+                        <li class="nav-menu__item"><a href="#contact_us" class="nav-menu__link">Contact us</a></li>
+                    </ul>
+                </nav>
+                <div class="footer__copyright"> 
+                    <a href="https://rs.school/" class="footer__copyright-link">Designed by Alisa Samborskaya
+                        <br><br>©RSSchool & ©Yem Digital 2021</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
