fix: donate page

--- a/src/pages/donate.html
+++ b/src/pages/donate.html
@@ -60,29 +60,29 @@
                         </div>
                     </div>
                     <div class="donate-feed-form">
-                        <form class="form-amount donate__form-position" action="#" method="GET">
+                        <form class="form-amount donate__form-position" action="#">
                             <div class="form-title">Amount</div>
                             <div class="debt-amount-slider">
-                                <input type="radio" name="debt-amount" id="1" value="1" required>
-                                <label for="1" data-debt-amount="$5000"></label>
-                                <input type="radio" name="debt-amount" id="2" value="2" required>
-                                <label for="2" data-debt-amount="$2000"></label>
-                                <input type="radio" name="debt-amount" id="3" value="3" required>
-                                <label for="3" data-debt-amount="$1000"></label>
-                                <input type="radio" name="debt-amount" id="4" value="4" required>
-                                <label for="4" data-debt-amount="$500"></label>
-                                <input type="radio" name="debt-amount" id="5" value="5" required>
-                                <label for="5" data-debt-amount="$250"></label>
-                                <input type="radio" name="debt-amount" id="6" value="6" required>
-                                <label for="6" data-debt-amount="$100"></label>
-                                <input type="radio" name="debt-amount" id="7" value="7" required>
-                                <label for="7" data-debt-amount="$50"></label>
-                                <input type="radio" name="debt-amount" id="8" value="8" required>
-                                <label for="8" data-debt-amount="$25"></label>
+                                <input type="radio" name="debt-amount" id="debt-1" value="$5000" required>
+                                <label for="debt-1" data-debt-amount="$5000"></label>
+                                <input type="radio" name="debt-amount" id="debt-2" value="$2000" required>
+                                <label for="debt-2" data-debt-amount="$2000"></label>
+                                <input type="radio" name="debt-amount" id="debt-3" value="$1000" required>
+                                <label for="debt-3" data-debt-amount="$1000"></label>
+                                <input type="radio" name="debt-amount" id="debt-4" value="$500" required>
+                                <label for="debt-4" data-debt-amount="$500"></label>
+                                <input type="radio" name="debt-amount" id="debt-5" value="$250" required>
+                                <label for="debt-5" data-debt-amount="$250"></label>
+                                <input type="radio" name="debt-amount" id="debt-6" value="$100" required>
+                                <label for="debt-6" data-debt-amount="$100"></label>
+                                <input type="radio" name="debt-amount" id="debt-7" value="$50" required>
+                                <label for="debt-7" data-debt-amount="$50"></label>
+                                <input type="radio" name="debt-amount" id="debt-8" value="$25" required>
+                                <label for="debt-8" data-debt-amount="$25"></label>
                                 <div class="debt-amount-pos"></div>
                             </div>
                             <div class="donate-another-amount">
-                                <input name="another-amount" type="number" min="1" max="9999" placeholder="Another amount">
+                                <input name="another-amount" maxlength="4" type="number" min="1" max="9999" placeholder="Another amount">
                                 <span>$</span>
                             </div>
                             <div class="donate-radio-regularity">
