feat: landing page media mobile

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,11 @@
                     </nav>
                     <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" class="header__link">Designed by ©</a>
             </header>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </section>
     <section class="watch-online">
@@ -254,7 +259,7 @@
             <div class="footer__wrap">
                 <div class="header__logo footer__logo">
                     <a href="#about" class="header__logo-link">
-                        <h1 class="header__title">PetStory online</h1>
+                        <div class="header__title footer__title">PetStory online</div>
                     </a>
                 </div>
                 <button type="button" class="button  button_min-radius footer__btn">
