--- a/src/pages/donate.html
+++ b/src/pages/donate.html
@@ -11,9 +11,9 @@
     <section class="header">
         <div class="container">
             <header class="header__wrap">
-                    <div class="header__logo">
+                    <div class="header__logo logo">
                         <a href="../index.html" class="header__logo-link">
-                            <h1 class="header__title">PetStory online</h1>
+                            <h1 class="header__title logo__title-small">PetStory online</h1>
                         </a>
                     </div>
                     <nav>
@@ -27,6 +27,11 @@
                     </nav>
                     <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" class="header__link">Designed by ©</a>
             </header>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </section>
     <main>
@@ -108,7 +113,7 @@
             <div class="footer__wrap">
                 <div class="header__logo footer__logo">
                     <a href="../index.html" class="header__logo-link">
-                        <h1 class="header__title">PetStory online</h1>
+                        <div class="header__title footer__title">PetStory online</div>
                     </a>
                 </div>
                 <button type="button" class="button  button_min-radius footer__btn">
