--- a/src/pages/donate.html
+++ b/src/pages/donate.html
@@ -65,43 +65,44 @@
                         </div>
                     </div>
                     <div class="donate-feed-form">
-                        <form class="form-amount donate__form-position" action="#">
-                            <div class="form-title">Amount</div>
-                            <div class="debt-amount-slider">
-                                <input type="radio" name="debt-amount" id="debt-1" value="$5000" required>
-                                <label for="debt-1" data-debt-amount="$5000"></label>
-                                <input type="radio" name="debt-amount" id="debt-2" value="$2000" required>
-                                <label for="debt-2" data-debt-amount="$2000"></label>
-                                <input type="radio" name="debt-amount" id="debt-3" value="$1000" required>
-                                <label for="debt-3" data-debt-amount="$1000"></label>
-                                <input type="radio" name="debt-amount" id="debt-4" value="$500" required>
-                                <label for="debt-4" data-debt-amount="$500"></label>
-                                <input type="radio" name="debt-amount" id="debt-5" value="$250" required>
-                                <label for="debt-5" data-debt-amount="$250"></label>
-                                <input type="radio" name="debt-amount" id="debt-6" value="$100" required>
-                                <label for="debt-6" data-debt-amount="$100"></label>
-                                <input type="radio" name="debt-amount" id="debt-7" value="$50" required>
-                                <label for="debt-7" data-debt-amount="$50"></label>
-                                <input type="radio" name="debt-amount" id="debt-8" value="$25" required>
-                                <label for="debt-8" data-debt-amount="$25"></label>
-                                <div class="debt-amount-pos"></div>
+                        <div class="donate-feed-form__title">Amount</div>
+                        <div class="donate-feed-form__wrap">
+                            <div class="donate-feed-form__price-randge-bg">
+                                <div class="donate-feed-form__price-range">
+                                    <input class="range-input-5000" type="radio" id="5000" name="price-range" value="5000"/>
+                                        <label class="range-label-5000" for="5000" data-debt-amount="$5000"></label>
+                                    <input class="range-input" type="radio" id="2000" name="price-range" value="2000"/>
+                                        <label class="range-label" for="2000" data-debt-amount="$2000"></label>
+                                    <input class="range-input" type="radio" id="1000" name="price-range" value="1000" checked/>
+                                        <label class="range-label" for="1000" data-debt-amount="$1000"></label>
+                                    <input class="range-input" type="radio" id="500" name="price-range" value="500"/>
+                                        <label class="range-label" for="500" data-debt-amount="$500"></label>
+                                    <input class="range-input" type="radio" id="250" name="price-range" value="250"/>
+                                        <label class="range-label" for="250" data-debt-amount="$250"></label>
+                                    <input class="range-input" type="radio" id="100" name="price-range" value="100"/>
+                                        <label class="range-label" for="100" data-debt-amount="$100"></label>
+                                    <input class="range-input" type="radio" id="50" name="price-range" value="50"/>
+                                        <label class="range-label" for="50" data-debt-amount="$50"></label>
+                                    <input class="range-input" type="radio" id="25" name="price-range" value="25"/>
+                                        <label class="range-label" for="25" data-debt-amount="$25"></label>
+                                </div>
                             </div>
-                            <div class="donate-another-amount">
+                            <div class="donate-feed-form__another-amount">
                                 <input name="another-amount" maxlength="4" type="number" min="1" max="9999" placeholder="Another amount">
                                 <span>$</span>
                             </div>
-                            <div class="donate-radio-regularity">
-                                <label class="donate-regularity">
-                                    <input type="radio" name="selector" value="monthly">
+                            <div class="donate-feed-form__regularity">
+                                <label class="donate-feed-form__regularity-selector">
+                                    <input type="radio" name="regularity-selector" value="monthly">
                                     <span>Monthly</span>
                                 </label>
-                                <label class="donate-regularity">
-                                    <input type="radio" name="selector" value="once" checked>
+                                <label class="donate-feed-form__regularity-selector">
+                                    <input type="radio" name="regularity-selector" value="once" checked>
                                     <span>Once</span>
                                 </label>
                             </div>
-                            <button type="submit" class="button">Feed a friend now</button>
-                        </form>
+                            <button type="submit" class="button donate-feed-form__btn">Feed a friend now</button>
+                        </div>
                     </div>
                     <div class="donate__text-bottom">Share with your friends on social networks </div>
                 </div>
