--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header" id="about">
         <div class="container">
-            <header class="header__wrap">
+            <header class="header__wrap header__hamburger">
                     <div class="header__logo logo ">
                         <a href="#about" class="header__logo-link">
                             <h1 class="header__title logo__title-small">PetStory online</h1>
