--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header" id="about">
         <div class="container">
-            <header class="header__wrap header__hamburger">
+            <header class="header__wrap">
                     <div class="header__logo logo ">
                         <a href="#about" class="header__logo-link">
                             <h1 class="header__title logo__title-small">PetStory online</h1>
@@ -26,12 +26,12 @@
                         </ul>
                     </nav>
                     <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online" class="header__link">Designed by ©</a>
-            </header>
-            <div class="hamburger">
+                    <div class="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
+            </header>
         </div>
     </section>
     <section class="watch-online">
