feat: testimonials carousel.js

--- a/src/pages/donate.html
+++ b/src/pages/donate.html
@@ -87,7 +87,7 @@
                                         <label class="range-label" for="25" data-debt-amount="$25"></label>
                                 </div>
                             </div>
-                            <form action="#">
+                            <form class="donate-feed-form__form" action="#">
                                 <div class="donate-feed-form__another-amount">
                                     <input id="another-amount" name="another-amount" type="number" max="9999" value="100" placeholder="Another amount" required>
                                     <span>$</span>
